analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/JvmOverloadsActualConstructorWithInheritedDefaults.java
public final class Foo /* common.pack.Foo*/ {
  @kotlin.jvm.JvmOverloads()
  public  Foo(int, int, int);//  .ctor(int, int, int)
}
